--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -16,6 +16,9 @@ WORKDIR /app
 # 5. 의존성 파일 복사 및 설치
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip uninstall openai==1.58.1 fnllm graphrag -y
+RUN pip install openai==1.58.2
+RUN pip install graphrag==0.16.0
 
 # 6. 소스 코드 복사
 COPY . .
