--- a/config/llm_config.yaml
+++ b/config/llm_config.yaml
@@ -1,7 +1,7 @@
 llm:
   api_key: ${GRAPHRAG_API_KEY}
   type: openai_chat # or azure_openai_chat
-  model: gpt-4o-mini
+  model: gpt-4.1
   model_supports_json: true # recommended if this is available for your model.
   max_tokens: 2000
   request_timeout: 180.0
